tests/invalid/test_103.wyal
type Entry is ({int key, int value} r)

define Map(Entry[] entries) is:
    forall(int i1, int i2):
        if:
            (i1 < |entries|) && (i2 < |entries|)
            entries[i1].key == entries[i2].key
        then:
            i1 == i2

define Bijection(Entry[] es) is:
    forall(int i1, int i2):
        if:
            (i1 < |es|) && (i2 < |es|)
            (es[i1].key == es[i2].key) || (es[i1].value == es[i2].value)
        then:
            i1 == i2

assert:
  forall(Entry[] xs):
    Map(xs) ==> Bijection(xs)
